# my_favorite_python_env

./: .actrc  .bash_profile  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build_docker_image.yml  lint.yml
doc/: CI_tool.md  container.md  dependabot_setting.md  directory_configuration.md  editor.md  linter_formatter.md  package_manager.md
my_favorite_python_env/: sample.py
