# poetry document: https://python-poetry.org/docs/
[tool.poetry]
name = "my-favorite-python-env"
version = "0.1.0"
description = "僕の好きなPython開発環境"
authors = ["arrowkato"]
license = "MIT"
readme = "README.md"
packages = [{include = "my_favorite_python_env"}]

[tool.poetry.dependencies]
# "^3.10.8" は ">=3.10.8, <4.0.0" と同じ意味です。
# ref https://python-poetry.org/docs/dependency-specification/#version-constraints
python = "^3.10.8"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=1.2.0"]
build-backend = "poetry.core.masonry.api"
